tests/baselines/reference/asyncArrowFunction7_es6.errors.txt
asyncArrowFunction7_es6.ts(3,24): error TS2524: 'await' expressions cannot be used in a parameter initializer.
asyncArrowFunction7_es6.ts(3,29): error TS1109: Expression expected.


==== asyncArrowFunction7_es6.ts (2 errors) ====
    var bar = async (): Promise<void> => {
      // 'await' here is an identifier, and not an await expression.
      var foo = async (a = await): Promise<void> => {
                           ~~~~~
!!! error TS2524: 'await' expressions cannot be used in a parameter initializer.
                                ~
!!! error TS1109: Expression expected.
      }
    }